-
Bug
-
Resolution: Done
-
P2: Important
-
5.11
-
None
-
02c5209db58ae000bdd5066e9bc4cc6c875646f7
Some QML profiler autotests assume that QTBUG-66230 doesn't exist or can be fixed. It turns out that this is wrong. Consequently, they have been blacklisted.
In particular the memory, profilerOnExit and translationBinding tests drop a TCP connection spontaneously on the server side and expect the client to receive all the previously sent data. This doesn't work in the general case.
- relates to
-
QTBUG-66230 QTcpSocket drops payload when two writes and a close overlap
-
- Closed
-
For Gerrit Dashboard: QTBUG-66269 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
219453,3 | QmlDebug: Use EngineControl to hold engines until we're done with them | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
219598,2 | QmlProfiler: Use EngineControl to hold engines until we're done | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |