QmlDebug: Use EngineControl to hold engines until we're done with them

Holding the engines with EngineControl makes sure we always receive the
full trace before the connection drops.

Task-number: QTBUG-66269
Change-Id: I9177c2a52743ba781547696508342c8d98557121
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>